--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1323,43 +1323,42 @@
   </div>
 
   <div id="thumbScroll" style="display: flex; overflow-x: auto; gap: 15px; padding-bottom: 20px; -webkit-overflow-scrolling: touch; scroll-snap-type: x mandatory;">
-    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-Schedule-Spring-2026.jpeg" onclick="popupGallery(8)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
-    <img src="https://lh3.googleusercontent.com/u/0/d/1lCIaCOrTusifqK1yezz7e2-lTta_EZMl" onclick="popupGallery(0)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
-    <img src="https://lh3.googleusercontent.com/u/0/d/1d3bKS9feh0jHSUc417oDk3Keiy2gmDSV" onclick="popupGallery(1)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
-    <img src="https://lh3.googleusercontent.com/u/0/d/1ttYQR6vJiaT6bn37kOv3NM-9iBMWq5mD" onclick="popupGallery(2)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
-    <img src="https://lh3.googleusercontent.com/u/0/d/1tmxnMytAdxGeKYfqZLtmRUu4WDjnVIcT" onclick="popupGallery(3)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
-    <img src="https://lh3.googleusercontent.com/u/0/d/1V8Xq_0vqHi59R0G4d5zQuJmgbC2c29Yb" onclick="popupGallery(4)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
-    <img src="https://lh3.googleusercontent.com/u/0/d/1QYoIC0eQs1aMsezqtEfqQIGfiG_xhGpI" onclick="popupGallery(5)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
-    <img src="https://lh3.googleusercontent.com/u/0/d/1oTK7qKQZBZPMy-RNaTu_czW7sYHEImJv" onclick="popupGallery(6)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
-    <img src="https://lh3.googleusercontent.com/u/0/d/1o66-D04s2dMwpWlBBcNC0HACsD-EqeZ7" onclick="popupGallery(7)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-Schedule-Spring-2026.jpeg" onclick="popupGallery(0)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="https://lh3.googleusercontent.com/u/0/d/1lCIaCOrTusifqK1yezz7e2-lTta_EZMl" onclick="popupGallery(1)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="https://lh3.googleusercontent.com/u/0/d/1d3bKS9feh0jHSUc417oDk3Keiy2gmDSV" onclick="popupGallery(2)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="https://lh3.googleusercontent.com/u/0/d/1ttYQR6vJiaT6bn37kOv3NM-9iBMWq5mD" onclick="popupGallery(3)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="https://lh3.googleusercontent.com/u/0/d/1tmxnMytAdxGeKYfqZLtmRUu4WDjnVIcT" onclick="popupGallery(4)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="https://lh3.googleusercontent.com/u/0/d/1V8Xq_0vqHi59R0G4d5zQuJmgbC2c29Yb" onclick="popupGallery(5)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="https://lh3.googleusercontent.com/u/0/d/1QYoIC0eQs1aMsezqtEfqQIGfiG_xhGpI" onclick="popupGallery(6)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="https://lh3.googleusercontent.com/u/0/d/1oTK7qKQZBZPMy-RNaTu_czW7sYHEImJv" onclick="popupGallery(7)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="https://lh3.googleusercontent.com/u/0/d/1o66-D04s2dMwpWlBBcNC0HACsD-EqeZ7" onclick="popupGallery(8)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
 
-    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-Schedule-2025-2026.jpeg" onclick="popupGallery(8)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
-    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands-results.jpeg" onclick="popupGallery(13)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">    
-    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands.jpeg" onclick="popupGallery(12)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
-    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent-results.jpeg" onclick="popupGallery(11)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">   
-    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent.jpeg" onclick="popupGallery(9)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
-    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-argent-69.jpeg" onclick="popupGallery(10)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-Schedule-2025-2026.jpeg" onclick="popupGallery(9)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands-results.jpeg" onclick="popupGallery(10)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands.jpeg" onclick="popupGallery(11)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent-results.jpeg" onclick="popupGallery(12)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent.jpeg" onclick="popupGallery(13)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-argent-69.jpeg" onclick="popupGallery(14)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
   </div>
 
   <script>
+    // 위 태그에 나열된 순서와 정확히 일치하도록 배열을 재구성했습니다.
     const images = [
-      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-Schedule-Spring-2026.jpeg",
-      "https://lh3.googleusercontent.com/u/0/d/1lCIaCOrTusifqK1yezz7e2-lTta_EZMl", 
-      "https://lh3.googleusercontent.com/u/0/d/1d3bKS9feh0jHSUc417oDk3Keiy2gmDSV",
-      "https://lh3.googleusercontent.com/u/0/d/1ttYQR6vJiaT6bn37kOv3NM-9iBMWq5mD", 
-      "https://lh3.googleusercontent.com/u/0/d/1tmxnMytAdxGeKYfqZLtmRUu4WDjnVIcT",
-      "https://lh3.googleusercontent.com/u/0/d/1V8Xq_0vqHi59R0G4d5zQuJmgbC2c29Yb", 
-      "https://lh3.googleusercontent.com/u/0/d/1QYoIC0eQs1aMsezqtEfqQIGfiG_xhGpI",
-      "https://lh3.googleusercontent.com/u/0/d/1oTK7qKQZBZPMy-RNaTu_czW7sYHEImJv", 
-      "https://lh3.googleusercontent.com/u/0/d/1o66-D04s2dMwpWlBBcNC0HACsD-EqeZ7",
-
-
-      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands.jpeg",
-      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands-results.jpeg",
-      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent-results.jpeg",
-      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-argent-69.jpeg",
-      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent.jpeg",
-      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-Schedule-2025-2026.jpeg",
+      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-Schedule-Spring-2026.jpeg", // 0
+      "https://lh3.googleusercontent.com/u/0/d/1lCIaCOrTusifqK1yezz7e2-lTta_EZMl", // 1
+      "https://lh3.googleusercontent.com/u/0/d/1d3bKS9feh0jHSUc417oDk3Keiy2gmDSV", // 2
+      "https://lh3.googleusercontent.com/u/0/d/1ttYQR6vJiaT6bn37kOv3NM-9iBMWq5mD", // 3
+      "https://lh3.googleusercontent.com/u/0/d/1tmxnMytAdxGeKYfqZLtmRUu4WDjnVIcT", // 4
+      "https://lh3.googleusercontent.com/u/0/d/1V8Xq_0vqHi59R0G4d5zQuJmgbC2c29Yb", // 5
+      "https://lh3.googleusercontent.com/u/0/d/1QYoIC0eQs1aMsezqtEfqQIGfiG_xhGpI", // 6
+      "https://lh3.googleusercontent.com/u/0/d/1oTK7qKQZBZPMy-RNaTu_czW7sYHEImJv", // 7
+      "https://lh3.googleusercontent.com/u/0/d/1o66-D04s2dMwpWlBBcNC0HACsD-EqeZ7", // 8
+      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-Schedule-2025-2026.jpeg", // 9
+      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands-results.jpeg", // 10
+      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands.jpeg", // 11
+      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent-results.jpeg", // 12
+      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent.jpeg", // 13
+      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-argent-69.jpeg" // 14
     ];
 
     function popupGallery(index) {
