--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
   
   <div style="position: relative; text-align: center; margin-bottom: 40px; padding: 20px 0; overflow: hidden;">
     <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: clamp(40px, 10vw, 80px); font-weight: 900; color: rgba(12, 35, 64, 0.04); white-space: nowrap; z-index: 1; pointer-events: none; letter-spacing: -2px;">
-      OFFICIAL WEBSITE
+      UTSA
     </div>
 
 
@@ -210,7 +210,7 @@
 <div style="max-width: 900px; margin: 0 auto 15px; padding: 0 15px; box-sizing: border-box;">
     <div style="margin-top: -10px; margin-bottom: 12px; display: flex; align-items: baseline; gap: 10px;">
         <h2 style="margin: 0; color: #0c2340; font-size: 15px; font-weight: 900; letter-spacing: 1.5px; text-transform: uppercase;">
-            Ongoing Activity
+            On-going Activity
         </h2>
         <span style="font-size: 10px; color: #806600; font-weight: 700; letter-spacing: 0.5px; text-transform: uppercase;">
             • Current Status
