--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -260,6 +260,12 @@
       .col-status { width: 15%; }
       .col-finish { width: 10%; }
     }
+    
+    @keyframes pulse-red {
+      0% { opacity: 1; transform: scale(1); }
+      50% { opacity: 0.5; transform: scale(0.8); }
+      100% { opacity: 1; transform: scale(1); }
+    }
   </style>
 
 <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center;">
@@ -271,25 +277,25 @@
 <div class="live-event-card">
     <div style="padding: 20px 25px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 10px;">
       <div style="display: flex; align-items: center; gap: 12px;">
-        <span style="background: #94a3b8; color: white; padding: 4px 14px; border-radius: 50px; font-size: 10px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 6px;">
-          <span style="width: 8px; height: 8px; background: white; border-radius: 50%; animation: pulse 1.5s infinite;"></span>
-          SCHEDULE DELAYED
+        <span style="background: #22c55e; color: white; padding: 4px 14px; border-radius: 50px; font-size: 10px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 6px;">
+          <span style="width: 8px; height: 8px; background: #ff0000; border-radius: 50%; animation: pulse-red 1s infinite; box-shadow: 0 0 5px #ff0000;"></span>
+          RESCHEDULED
         </span>
         <h2 style="color: #0c2340; margin: 0; font-size: 22px; font-weight: 800;">Compadres Collegiate (UTRGV) Qualifying</h2>
       </div>
-      <div style="font-size: 12px; color: #95a5a6; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Jan 26, 2026</div>
+      <div style="font-size: 12px; color: #95a5a6; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Jan 27, 2026</div>
     </div>
 
-<div style="margin: 0 25px 15px 25px; padding: 12px 15px; background: #f8fafc; border-left: 4px solid #94a3b8; border-radius: 4px; display: flex; align-items: flex-start; gap: 10px;">
+<div style="margin: 0 25px 15px 25px; padding: 12px 15px; background: #f8fafc; border-left: 4px solid #806600; border-radius: 4px; display: flex; align-items: flex-start; gap: 10px;">
   <div style="flex-shrink: 0; margin-top: 2px;">
-    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
       <circle cx="12" cy="12" r="10"></circle>
       <line x1="12" y1="8" x2="12" y2="12"></line>
       <line x1="12" y1="16" x2="12.01" y2="16"></line>
     </svg>
   </div>
-  <p style="margin: 0; font-size: 13px; color: #475569; font-weight: 700; line-height: 1.5;">
-    NOTICE: Schedule adjusted to Wed/Thu due to winter storm and course closure. Rounds are subject to change based on weather conditions.
+  <p style="margin: 0; font-size: 13px; color: #0c2340; font-weight: 700; line-height: 1.5;">
+    NOTICE: Round 3 is confirmed for tomorrow (Jan 28) at The Canyons Course. Round 4 has been officially canceled.
   </p>
 </div>
 
@@ -365,32 +371,32 @@
             <td class="hide-mobile" style="font-weight: 700; font-size: 13px;">Final</td>
             <td class="hide-mobile" style="font-weight: 800; font-size: 16px;">2</td>
           </tr>
-          <tr>
+          <tr style="background: rgba(34, 197, 94, 0.03);">
             <td class="col-left">
-              <div style="font-weight: 600; font-size: 13px; color: #94a3b8;">Jan 28, 2026 (TBD)</div>
+              <div style="font-weight: 600; font-size: 13px; color: #22c55e;">Jan 28, 2026</div>
               <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 3: The Canyons Course (Par 72)</div>
               <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio </div>
               <div class="mobile-status-bar">
-                <div class="ms-item" style="border:none;"><span class="ms-label">STATUS</span><span class="ms-value" style="color:#94a3b8;">Delayed</span></div>
+                <div class="ms-item" style="border:none;"><span class="ms-label">STATUS</span><span class="ms-value" style="color:#22c55e;">Scheduled</span></div>
               </div>
             </td>
             <td class="hide-mobile" style="color: #bdc3c7;">-</td>
             <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-            <td class="hide-mobile" style="font-weight: 700; color: #94a3b8;">Delayed</td>
+            <td class="hide-mobile" style="font-weight: 700; color: #22c55e;">Scheduled</td>
             <td class="hide-mobile" style="color: #bdc3c7;">-</td>
           </tr>
-          <tr>
+          <tr style="opacity: 0.6;">
             <td class="col-left">
-              <div style="font-weight: 600; font-size: 13px; color: #94a3b8;">Jan 29, 2026 (TBD)</div>
-              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 4: The Oaks Course (Par 72)</div>
-              <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio </div>
+              <div style="font-weight: 600; font-size: 13px; color: #94a3b8;">Jan 29, 2026</div>
+              <div style="font-weight: 800; color: #94a3b8; font-size: 16px; margin: 2px 0; text-decoration: line-through;">Round 4: The Oaks Course (Par 72)</div>
+              <div style="font-size: 12px; color: #94a3b8;">TPC San Antonio </div>
               <div class="mobile-status-bar">
-                <div class="ms-item" style="border:none;"><span class="ms-label">STATUS</span><span class="ms-value" style="color:#94a3b8;">Delayed</span></div>
+                <div class="ms-item" style="border:none;"><span class="ms-label">STATUS</span><span class="ms-value" style="color:#94a3b8;">Canceled</span></div>
               </div>
             </td>
             <td class="hide-mobile" style="color: #bdc3c7;">-</td>
             <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-            <td class="hide-mobile" style="font-weight: 700; color: #94a3b8;">Delayed</td>
+            <td class="hide-mobile" style="font-weight: 700; color: #94a3b8;">Canceled</td>
             <td class="hide-mobile" style="color: #bdc3c7;">-</td>
           </tr>
         </tbody>
@@ -401,7 +407,7 @@
       <div style="color: rgba(255,255,255,0.7); font-size: 12px; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Current Stats</div>
       <div style="display: flex; gap: 25px; align-items: center;">
         <div style="text-align: right; padding-right: 20px; border-right: 1px solid rgba(255,255,255,0.1);">
-          <span style="color: rgba(255,255,255,0.6); font-size: 10px; font-weight: 800; display: block;">R1-R2-R3-R4</span>
+          <span style="color: rgba(255,255,255,0.6); font-size: 10px; font-weight: 800; display: block;">R1-R2-R3</span>
           <span style="color: #e74c3c; font-size: 20px; font-weight: 900;">68-69</span>
         </div>
         <div style="text-align: right; padding-right: 20px; border-right: 1px solid rgba(255,255,255,0.1);">
@@ -415,14 +421,6 @@
       </div>
     </div>
 </div>
-
-<style>
-  @keyframes pulse {
-    0% { opacity: 1; transform: scale(1); }
-    50% { opacity: 0.2; transform: scale(0.8); }
-    100% { opacity: 1; transform: scale(1); }
-  }
-</style>
 
   
 
