--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -445,7 +445,7 @@
             Status Report: Qualifying & Schedule Update
         </h3>
         <p style="font-size: 14px; color: #64748b; line-height: 1.5; margin: 0 auto 20px auto; max-width: 450px;">
-            Technical feedback from R1-R2 and current team activities during the winter storm in San Antonio.
+            Technical feedback from R1-R2 and finalized qualifying schedule following the weather disruptions.
         </p>
         
         <button type="button" 
@@ -473,34 +473,35 @@
                         <span style="font-weight: 800; color: #0c2340; font-size: 13px; text-transform: uppercase;">Qualifying Feedback (R1-R2)</span>
                     </div>
                     <p style="margin: 0; font-size: 14px; color: #475569; line-height: 1.6;">
-                        <strong>Ball-Striking:</strong> Remained consistent through R1-R2. Moderate wind levels provided manageable playing conditions.<br>
-                        <strong>Course Conditions:</strong> The Oaks course is currently being prepared for the Valero Texas Open, resulting in significant greenside and putting surface challenges.
+                        <strong>Ball-Striking:</strong> Consistent performance maintained (68-69). Technical focus shifted to managing the aggressive greenside setups at TPC San Antonio as the Valero Texas Open preparation continues.
                     </p>
                 </div>
 
                 <div style="background: #f8fafc; padding: 18px; border-radius: 8px; border: 1px solid #e2e8f0;">
                     <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 8px;">
                         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
-                        <span style="font-weight: 800; color: #0c2340; font-size: 13px; text-transform: uppercase;">Team & Training Activity</span>
+                        <span style="font-weight: 800; color: #0c2340; font-size: 13px; text-transform: uppercase;">Team Unity & Collaboration</span>
                     </div>
                     <p style="margin: 0; font-size: 14px; color: #475569; line-height: 1.6;">
-                        With campus facilities closed, Joshua and teammates are collaborating to maintain performance rhythms. Group sessions at PGA Superstore (Trackman iron work) and indoor drills at the residence are being utilized to stay ready collectively.
+                        During the storm-induced closure, the team utilized indoor facilities and Trackman sessions to stay sharp. Team relationships remain a priority, with collective training sessions ensuring all members stay focused on the Spring Opener.
                     </p>
                 </div>
 
-                <div style="background: #f8fafc; padding: 18px; border-radius: 8px; border: 1px solid #e2e8f0;">
+                <div style="background: #f8fafc; padding: 18px; border-radius: 8px; border: 1px solid #806600;">
                     <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 8px;">
-                        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path><path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path></svg>
-                        <span style="font-weight: 800; color: #0c2340; font-size: 13px; text-transform: uppercase;">Academic & Next Steps</span>
+                        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg>
+                        <span style="font-weight: 800; color: #806600; font-size: 13px; text-transform: uppercase;">Final Schedule Update</span>
                     </div>
                     <p style="margin: 0; font-size: 14px; color: #475569; line-height: 1.6;">
-                        All upcoming academic assignments have been completed. Qualifying R3-R4 rescheduled for Wed/Thu (tentative). Friday departure for Cancun (Spring Opener) remains as scheduled.
+                        • <strong>Round 3:</strong> Confirmed for Jan 28 (Wed) at The Canyons Course.<br>
+                        • <strong>Round 4:</strong> Officially <strong>Canceled</strong> due to schedule compression.<br>
+                        • <strong>Travel:</strong> Departure for Cancun on Friday remains on schedule.
                     </p>
                 </div>
             </div>
             
             <p style="font-size: 11px; color: #cbd5e1; text-align: center; margin-top: 25px; font-weight: 600; letter-spacing: 1px;">
-                CURRENT STATUS UPDATE • JAN 26, 2026
+                CURRENT STATUS UPDATE • JAN 27, 2026
             </p>
         </div>
     </div>
